--- a/index.html
+++ b/index.html
@@ -1,27 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WalletConnect App</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div id="app">
-    <header>
-      <h1>WalletConnect App</h1>
-    </header>
-    <main>
-      <button id="connectButton">Connect Wallet</button>
-      <div id="accountInfo"></div>
-    </main>
-    <footer>
-      <p>&copy; 2024 WalletConnect App</p>
-    </footer>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3modal@1.9.5/dist/index.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
-  <script src="app.js"></script>
-</body>
-</html>
+/* styles.css */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
+
+header, footer {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+  text-align: center;
+  width: 100%;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#connectButton {
+  padding: 1em;
+  font-size: 1em;
+  margin-top: 1em;
+  cursor: pointer;
+}
+
+#accountInfo {
+  margin-top: 2em;
+  font-size: 1.2em;
+}
