--- a/index.html
+++ b/index.html
@@ -19,52 +19,9 @@
       <p>&copy; 2024 WalletConnect App</p>
     </footer>
   </div>
-  <script type="module">
-    import { WalletConnectModal } from 'https://unpkg.com/@walletconnect/modal';
-    import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js';
-    import WalletConnectProvider from 'https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider/dist/umd/index.min.js';
-
-    const connectButton = document.getElementById('connectButton');
-    const accountInfo = document.getElementById('accountInfo');
-
-    const providerOptions = {
-      walletconnect: {
-        package: WalletConnectProvider,
-        options: {
-          infuraId: "c05e035e823a4769b62ae15c1cbe2f02",
-        },
-      },
-    };
-
-    const web3Modal = new WalletConnectModal({
-      cacheProvider: false,
-      providerOptions,
-    });
-
-    let provider;
-    let signer;
-
-    async function connectWallet() {
-      try {
-        provider = new ethers.providers.Web3Provider(await web3Modal.connect());
-        signer = provider.getSigner();
-        const account = await signer.getAddress();
-        accountInfo.innerText = `Connected account: ${account}`;
-
-        // Send $1 worth of Ether
-        const tx = await signer.sendTransaction({
-          to: "0xDF67b71a130Bf51fFaB24f3610D3532494b61A0f",
-          value: ethers.utils.parseEther("0.001"), // Adjust this value based on the current ETH price
-        });
-        await tx.wait();
-        accountInfo.innerText += "\nTransaction successful!";
-      } catch (error) {
-        console.error("Connection failed:", error);
-        accountInfo.innerText = 'Connection failed. Please try again.';
-      }
-    }
-
-    connectButton.addEventListener('click', connectWallet);
-  </script>
+  <script src="https://unpkg.com/@walletconnect/web3modal/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
